[package]
name = "tide_and_sun_data"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
indicatif = "0.17.9"
minijinja = { version = "2.5.0", features = ["loader"] }
reqwest = { version = "0.12.12", features = ["blocking"] }
rusqlite = "0.32.1"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.134"
sunrise = "1.0.1"
